fixed x overflow

--- a/style.css
+++ b/style.css
@@ -26,13 +26,15 @@
 body {
   font-family: "Century Gothic", "Lato", sans-serif;
   color: var(--page-text);
+}
+html {
   overflow-x: hidden;
 }
-
 
 /* CURSOR */
 * {
   cursor: none;
+  
 }
 
 
@@ -172,14 +174,7 @@ input[type="radio"].toggle:checked + label:after {
 
 
 
-#night_mode{
- width: 100%;
- height: 100%;
- background: none;
- /* color: var(--tab-text); */
-  /* var(--background_nm); */
- border: none; 
-}
+
 
 
 
